# dataset-analysis

./: .gitignore  LICENSE  README.md  REPORT.md  main.py  pyproject.toml  report.md  requirements.txt  run.txt
files/output/: table_correlation_prices.csv  table_correlation_volatility.csv  table_drawdown_gain.csv  table_regression.csv  table_returns.csv  table_top10_volume.csv  table_volatility.csv
reports/: market_analysis.csv  predictions_analysis.csv
src/dataset_analysis/: __init__.py  data_downloader.py  data_saver.py  main.py  market_analyzer.py  prediction_analyzer.py  price_plotter.py
