[project]
name = "dataset-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Ilya05228", email = "iliyaand05@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.0",
]

[project.scripts]
main = "dataset_analysis.main:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
